Add new problems

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
   "cSpell.words": [
+    "foodpanda",
     "leetcode",
     "linkedin",
     "paypay",
     "quickselect",
     "rakuten",
-    "foodpanda"
+    "shopback",
+    "Subarray"
   ]
 }
